--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,13 @@
   <title></title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <!--<link href="css/style.css" rel="stylesheet">-->
 </head>
 
 <body>
   <h1>I'm sorry, Dave; I can't do that.</h1>
+    <script src="bundle.js"></script>
 </body>
 
 </html>
