--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <h1>I'm sorry, Dave; I can't do that!</h1>
+  <h1>I'm sorry, Dave; I can't do that.</h1>
     <script src="bundle.js"></script>
 </body>
 
