--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,24 @@
 </head>
 
 <body>
-  <h1>I'm sorry, Dave; I can't do that.</h1>
+  <h1>I'm sorry, Dave; I can't do that; but I can do this:</h1>
+  <h2>Users</h2>
+  <table>
+    <thead>
+    <th>&nbsp;</th>
+    <th>ID</th>
+    <th>First name</th>
+    <th>Last name</th>
+    <th>Email</th>
+    </thead>
+    <tbody id="users">
+
+    </tbody>
+  </table>
+
     <script src="bundle.js"></script>
+    <!--check for certain JS-->
+    <script src="https://cdn.polyfill.io/v2/polyfill.js?features=fetch"></script>
 </body>
 
 </html>
